# TOFFEE

./: LICENSE  README.md  TOFFEE.ipynb  paper.md  requirements.txt  toffee.py
.github/workflows/: draft-pdf.yml
JOSS/: bibliography.bib  paper.md
docs/: flare_finder_docs.txt  flare_finder_manual.rst  flare_finder_manual.txt  installation.md  installation.rst  pyproject.toml  running_tests.md
examples/: Flare_Catalog_Loop.ipynb
toffee/: __init__.py  main.py  test.py
toffee/tests/: test.py
tutorials/: 01_flatten_tutorial.ipynb  02_lightcurve_masking_tutorial.ipynb  03_flare_finder_tutorial.ipynb  05_secondary_detection_tutorial.ipynb  flare_finder_tutorial.ipynb  flare_masking_tutorial.ipynb  primary_detection_tutorial.ipynb
