[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "star_toffee"
version = "1.0.2b"
dependencies = ['astropy>=7.0.0',
                'astroquery>=0.4.11',
                'lightkurve>=2.5.1',
                'matplotlib>=3.10.7',
                'numpy>=1.14.0',
                'pandas>=2.3.3',
                'pytest',
                'Requests>=2.32.5',
                'scikit_learn>=1.7.2',
                'scipy>=1.16.3',
                'wotan>=1.10',
                ]

authors = [
  { name="Jason Reeves", email="jasonree702@gmail.com" },
  { name="Andy Zhang", email="Andy.Zhang649964@tufts.edu" },
  { name="David V. Martin", email="david.martin@tufts.edu" },
]

description = "Package for finding flares in TESS lightcurves"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/JasonReeves702/TOFFEE/blob/main/README.md"
Issues = "https://github.com/JasonReeves702/TOFFEE/issues"


[tool.setuptools]
package-dir = {"" = "src"} 
#packages = ["toffee"]

[tool.setuptools.packages.find]
where = ["src"]      
include = ["toffee*"]
#include = ["toffee*", "toffee.tests*"]
